fixed distorted images issue

--- a/screen_style.css
+++ b/screen_style.css
@@ -10,8 +10,7 @@
 
 ol {
     font-style: italic;
-    list-style: upper-roman inside none;
-}
+    list-style: upper-roman inside none;1 43}
 
 ul {
     list-style-position: inside;
@@ -28,6 +27,7 @@ body {
 
 .main img {
     width: 90%;
+    height: 90%;
 }
 
 h1 {
